<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PouleSimulator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_start">com.bonenkamp.PouleSimulation.StartUpPreferences</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progressdialog_title">First time setup...</string>
    <string name="preference_poule">poule_preference</string>
    <string name="creating_poule">Creating poule...</string>
    <string name="title_activity_tournament_simulation">TournamentSimulationActivity</string>
    <string name="simulating_match">Simulating match...</string>
    <string name="standings">Standings</string>
    <string name="create_team">Create your team</string>
    <string name="team_name_placeholder">New team name</string>
    <string name="attack_strength">Attack strength</string>
    <string name="midfield_strength">Midfield strength</string>
    <string name="defense_strength">Defense strength</string>
    <string name="confirm_team">Save team</string>
    <string name="cancel">Cancel</string>
    <string name="team_name_label">Team name:</string>
    <string name="set_team_stats_label">Set team stats, minimum value 1, maximum value is 100</string>
    <string name="teams_stats">Teams</string>
    <string name="select_teams_for_pool">Create your poule</string>
    <string name="remove">Remove</string>
    <string name="match_1_text">Match 1:</string>
    <string name="tournament_match_schema_title">Tournament matches:</string>
    <string name="average_goals_label">Average nr. of goals:</string>
    <string name="attack_stat_label">Attack:</string>
    <string name="midfield_label">Midfield:</string>
    <string name="defense_label">Defense:</string>
    <string name="match_overview_title">Match results:</string>
    <string name="teams_info_title">Teams</string>
    <string name="back_to_home">Return to the home screen</string>
    <string name="tournament_results_name_label">Team name:</string>
    <string name="tournament_results_points">Total points:</string>
    <string name="tournament_results_goals_label">Total goals:</string>
    <string name="home_create_tournament_button">Start tournament</string>
    <string name="team_1">Team 1:</string>
    <string name="team_2">Team 2:</string>
    <string name="team_3">Team 3:</string>
    <string name="team_4">team 4:</string>
    <string name="viewHolderId">viewHolderId</string>
    <string name="listObjectId">listObjectId</string>
    <string name="tournament_results_title">Tournament results</string>

</resources>
