<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background_gradient"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:text="@string/select_teams_for_pool"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView_1"
        android:layout_marginTop="15dp"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/textView_1"
        android:background="@drawable/orange_background_border"
        android:layout_above="@+id/linear_button_container">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_create_tournament_button"
            android:id="@+id/btnCreateTournament"
            android:background="@color/greenLight"
            android:textColor="@color/white"
            android:padding="5dp"
            android:shadowColor="@color/green"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_team_1"
            android:spinnerMode="dropdown"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_team_2"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/select_team_1"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_team_3"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/select_team_2"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_team_4"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/select_team_3"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_1"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/select_team_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_2"
            android:id="@+id/textView3"
            android:layout_alignTop="@+id/select_team_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_3"
            android:id="@+id/textView4"
            android:layout_below="@+id/select_team_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_4"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/select_team_4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear_button_container">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@color/orangeDark"
            android:shadowColor="@color/orangeLight"
            android:text="Create new Team"
            android:id="@+id/btnCreateTeam"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@color/orangeDark"
            android:shadowColor="@color/orangeLight"
            android:text="@string/teams_stats"
            android:id="@+id/btnTeamStats"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
