<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="New Text"
        android:id="@+id/item_team_name"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_goals_label"
        android:id="@+id/item_average_goals_label"
        android:layout_below="@+id/item_team_name"
        android:layout_marginLeft="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/item_average_goals"
        android:layout_below="@+id/item_team_name"
        android:layout_toRightOf="@id/item_average_goals_label"
        android:layout_marginLeft="5dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/item_attack_stat"
        android:layout_marginRight="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_stat_label"
        android:id="@+id/item_attack_stat_label"
        android:layout_alignBaseline="@id/item_attack_stat"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/item_attack_stat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/item_midfield_stat"
        android:layout_marginRight="25dp"
        android:layout_alignTop="@+id/item_average_goals"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midfield_label"
        android:id="@+id/item_midfield_stat_label"
        android:layout_below="@id/item_attack_stat_label"
        android:layout_alignBaseline="@id/item_midfield_stat"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/item_midfield_stat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/item_defense_stat"
        android:layout_below="@+id/item_midfield_stat"
        android:layout_marginRight="25dp"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defense_label"
        android:id="@+id/item_defense_stat_label"
        android:layout_alignBaseline="@id/item_defense_stat"
        android:layout_marginRight="5dp"
        android:layout_below="@id/item_midfield_stat_label"
        android:layout_toLeftOf="@id/item_defense_stat"/>

</RelativeLayout>