<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bonenkamp.PouleSimulator.fragments.TournamentResultsFragment"
    android:background="@drawable/blue_background_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:layout_centerHorizontal="true"
        android:id="@+id/tournament_results_title"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/orange_background_border"
        android:layout_below="@id/tournament_results_title"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:id="@+id/relativeLayout2">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/btn_tournament_results_toHome"
            android:columnCount="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournament_results_name_label"
                android:id="@+id/tournament_label_name"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournament_results_points"
                android:layout_marginLeft="10dp"
                android:id="@+id/tournament_label_points"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tournament_results_goals_label"
                android:id="@+id/tournament_label_goals"
                android:layout_row="0"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textview_result_1"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textview_result_2"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textview_result_3"
                android:layout_row="3"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textview_result_4"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_1_points"
                android:layout_row="1"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_2_points"
                android:layout_row="2"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_3_points"
                android:layout_row="3"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_4_points"
                android:layout_row="4"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_1_goals"
                android:layout_row="1"
                android:layout_column="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_2_goals"
                android:layout_row="2"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_3_goals"
                android:layout_row="3"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="New Text"
                android:id="@+id/textview_result_4_goals"
                android:layout_row="4"
                android:layout_column="2"/>
        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tournament_results_toHome"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/orangeDark"
            android:shadowColor="@color/orangeLight"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/back_to_home" />

    </RelativeLayout>

</RelativeLayout>
